--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,11 +1,13 @@
 <div class="grid-container">
   <h1 class="mat-h1">Bienvenidos</h1>
+
+
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile  [colspan]="2" [rowspan]="1">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
-            {{card.title}}
+            
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
               <mat-icon>more_vert</mat-icon>
             </button>
@@ -22,7 +24,7 @@
               ¡¡¡El home funciona !!!
 
               <br>
-              Link para registrar usuario:  <a href="/register">[Acá]</a>            
+              <div  *ngIf="!loggedIn"  >  Link para registrar usuario:  <a href="/register">[Acá]</a> </div>            
 
 
           </div>
@@ -32,4 +34,6 @@
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+
+  
 </div>
