--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-       <!-- <a mat-list-item href="/login">Iniciar sesión</a> -->
+      <a mat-list-item href="/login">Iniciar sesión</a> 
       <a mat-list-item href="/register">Registrarme</a>
     </mat-nav-list>
   </mat-sidenav>
