--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -3,10 +3,19 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>
+      Menu
+    </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="/login">Iniciar sesión</a> 
-      <a mat-list-item href="/register">Registrarme</a>
+
+        <a mat-list-item  >
+            <div *ngIf="loggedIn"><b>{{user.username}}</b></div>       
+        </a> 
+
+
+      <a mat-list-item *ngIf="!loggedIn" href="/login">Iniciar sesión</a> 
+      <a mat-list-item *ngIf="!loggedIn" href="/register">Registrarme</a>
+      <a mat-list-item *ngIf="loggedIn" (click)="logout()" href="#">Cerrar sesión</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
